# TheWanderingHevno

./: .dockerignore  .env.example  .gitignore  Dockerfile  MANIFEST.in  README.md  backend.Dockerfile  cli.py  codeGen.py  code_collection.md  conftest.py  create_demo_sandbox.py  docker-compose.dist.yml  docker-compose.yml  entrypoint.sh  frontend.Dockerfile  hevno.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  run-dev-windows.bat  start-docker.bat  stop-docker.bat  vite.config.js
assets/templates/: settings.html
backend/: README.md  app.py  container.py  main.py  manual.md  models.py  package-lock.json  package.json  tsconfig.json
backend/api/: base_router.py  persistence.py  reporters.py  sandbox_router.py
backend/core/: contracts.py  dependencies.py  dependency_parser.py  engine.py  evaluation.py  executor.py  hooks.py  interfaces.py  loader.py  plugin_manager.py  plugin_types.py  registry.py  reporting.py  runtime.py  sandbox_models.py  serialization.py  services.py  state.py  state_models.py  tasks.py  templating.py  types.py  utils.py
backend/llm/: manager.py  models.py  registry.py  reporters.py  service.py
backend/llm/providers/: __init__.py  gemini.py
backend/persistence/: models.py  service.py
backend/runtimes/: base_runtimes.py  control_runtimes.py  reporters.py
backend/runtimes/codex/: invoke_runtime.py  models.py
backend/src/: main.ts
backend/src/models/: graph_schema.ts
backend/src/services/: pipeline_runner.ts
frontend/: ContributionRegistry.js  HookManager.js  ManifestProvider.js  README.md  RemoteHookProxy.js  ServiceContainer.js  main.js  manual.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
frontend/apps/workbench/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/services/: ContributionService.js  GlobalHookRegistry.js
frontend/src/: App.tsx  index.css
old_hevno/: code_collection.md  manifest.json
old_hevno/assets/templates/: settings.html
old_hevno/src/core/: orchestrator.js
old_hevno/src/llm_callers/: gemini_caller.js
old_hevno/src/utils/: llm_logger.js
old_hevno/src/worldbook/: loader.js  manager.js
old_hevno/src_from_root/core/: apiKeyManager.js  function_registry.js  llm_dispatcher.js
old_hevno/src_from_root/worldbook/: index.js
plugins/core_api/: __init__.py  auditor.py  base_router.py  contracts.py  dependencies.py  manifest.json  sandbox_router.py  system_router.py
plugins/core_api/tests/: test_api_e2e.py
plugins/core_codex/: __init__.py  api.py  invoke_runtime.py  manifest.json  models.py
plugins/core_codex/tests/: conftest.py  test_codex_api.py  test_codex_runtime.py  test_codex_via_resource_api.py
plugins/core_diagnostics/: __init__.py  api.py  auditor.py  contracts.py  manifest.json  package.json  reporters.py  vite.config.js
plugins/core_diagnostics/src/: main.jsx
plugins/core_diagnostics/tests/: conftest.py  test_diagnostics_api_e2e.py
plugins/core_engine/: __init__.py  api.py  base_runtimes.py  contracts.py  control_runtimes.py  dependency_parser.py  editor_api.py  editor_utils.py  engine.py  evaluation.py  evaluation_service.py  graph_resolver.py  interfaces.py  manifest.json  models.py  registry.py  schema_api.py  state.py  utils.py
plugins/core_engine/runtimes/: base_runtimes.py  control_runtimes.py  data_runtimes.py  flow_runtimes.py  (+1 more)
plugins/core_goliath/: manifest.json  package.json  vite.config.js
plugins/core_history/: manifest.json  package.json  vite.config.js
plugins/core_layout/: index.ts  manifest.json  package.json  vite.config.js  vite.config.ts
plugins/core_llm/: __init__.py  config_api.py  contracts.py  factory.py  manager.py  manifest.json  models.py  registry.py  reporters.py  runtime.py  service.py  utils.py
plugins/core_llm_config/: manifest.json  package.json  vite.config.js
plugins/core_logging/: __init__.py  logging_config.yaml  manifest.json
plugins/core_memoria/: __init__.py  manifest.json  models.py  runtimes.py  tasks.py
plugins/core_persistence/: __init__.py  api.py  contracts.py  dependencies.py  manifest.json  models.py  service.py  stores.py
plugins/core_remote_hooks/: __init__.py  contracts.py  emitter.py  manifest.json  registry.py
plugins/core_runner/: manifest.json  package.json  vite.config.js
plugins/core_runner_ui/: manifest.json  package.json  vite.config.js
plugins/core_sandboxes/: manifest.json  package.json  vite.config.js
plugins/core_statusbar_item/: manifest.json  package.json  vite.config.js
plugins/core_websocket/: __init__.py  connection_manager.py  manifest.json
plugins/example_logger/: __init__.py  hooks.py
plugins/page_demo/: manifest.json  package.json  vite.config.js
plugins/panel_conversation_stream/: manifest.json  package.json  vite.config.js
plugins/panel_debug_moment/: manifest.json  package.json  vite.config.js
plugins/panel_snapshot_history/: manifest.json  package.json  vite.config.js
plugins/sandbox_editor/: manifest.json  package.json  vite.config.js
plugins/sandbox_explorer/: manifest.json  package.json  vite.config.js
plugins/sandbox_manager/: index.ts  manifest.json  package.json  vite.config.ts
scripts/: preload.js
src/: index.js
src/core/: apiKeyManager.js  function_registry.js  llm_dispatcher.js  manager.js  orchestrator.js
src/data/: defaultPipeline.js  pluginSetting.js
src/llm_callers/: gemini_caller.js
src/utils/: debug_config.js  logging_example.js
src/worldbook/: manager.js  processor.js  st-integration.js
tests/: conftest.py  conftest_data.py  test_01_foundations.py  test_01_models.py  test_02_building_blocks.py  test_02_evaluation_unit.py  test_02_runtimes.py  test_03_engine.py  test_03_engine_integration.py  test_03_executor.py  test_04_api_e2e.py  test_04_templating.py  test_05_concurrency.py  test_06_map_runtime.py  test_07_codex_system.py  test_08_llm_gateway.py  test_09_persistence_api.py  test_core_background_tasks.py  test_core_contracts.py  test_platform_core.py
(+160 files in other folders)
