# Hevno/pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

name = "hevno-engine"
version = "1.2.0"
authors = [
    { name="Hevno Team", email="contact@example.com" },
]
description = "A dynamically loaded, modular execution engine for Hevno, built with a plugin-first architecture."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# 核心依赖
dependencies = [
    "fastapi",
    "pydantic",
    "pyyaml",
    "pytest",
    "pytest-asyncio",
    "httpx",
    "google-generativeai",
    "tenacity",
    "asgi-lifespan",
    "python-dotenv",
    "Pillow",
    "aiofiles",
    "cloudpickle",
    "typing-extensions",
]

[project.optional-dependencies]
dev = [ 
    "uvicorn[standard]",
    "typer[all]"
]

[project.scripts]
hevno = "cli:app"

[project.entry-points."hevno.plugins"]
# 这部分通常用于打包发布后的插件发现，对于本地开发可能不是必需的
# 但保留它没有坏处
core_logging = "plugins.core_logging"

[tool.setuptools]
include-package-data = true
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "plugins*"]


# --- Pytest 配置 ---
[tool.pytest.ini_options]
# 明确指定测试文件的搜索路径
testpaths = [
    "tests",
    # 允许 pytest 在插件目录中发现 tests/ 子目录
    "plugins", 
]

# 配置 pytest-asyncio
asyncio_mode = "auto"

# 定义你的自定义标记
markers = [
    "e2e: marks tests as end-to-end, which may require network access and secrets."
]